# net-faker

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: openapi.yaml
src/qmonus_net_faker/: __main__.py  action.py  constants.py  server.py
src/qmonus_net_faker/application/: cli_application.py  exceptions.py  manager_application.py  plugin.py
src/qmonus_net_faker/domain/: exceptions.py  file_domain.py  netconf_service_domain.py  snmp_service_domain.py  stub_domain.py  yang_tree_domain.py
src/qmonus_net_faker/infrastructure/: file_infrastructure.py  stub_infrastructure.py  yang_tree_infrastructure.py
src/qmonus_net_faker/infrastructure/init_files/module/handlers/junos/: __init__.py
src/qmonus_net_faker/infrastructure/init_files/stubs/: stubs.yaml
src/qmonus_net_faker/infrastructure/init_files/yangs/junos/: junos-conf-interfaces.yang  junos-conf-policy-options.yang  junos-conf-root.yang
src/qmonus_net_faker/infrastructure/init_files/yangs/junos/yang_tree/: yang_tree_0.part
src/qmonus_net_faker/interface/: cli_interface.py  exceptions.py  http_stub_interface.py  manager_interface.py  server.crt  server.key  snmp_stub_interface.py  ssh_host_key  ssh_stub_interface.py  telnet_stub_interface.py
src/qmonus_net_faker/libs/: file_lib.py  http_client.py  module_utils.py  netconf.py  pyang_wrapper.py  str_utils.py  validator.py  xml_utils.py  yang.py
tests/: conftest.py  http_client.py  test_cli.py  test_cli_parser.py  test_restapi.py  test_stub.py  test_version.py
